2004-05-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinX.c:                fix drawing of unicode chars in menu
	* win/tkWinInt.h (TkWinProcs): titles. [Bug #904371] (riefenstahl)
	* win/tkWinMenu.c (ReconfigureWindowsMenu):

	* generic/tkClipboard.c:   Move TkClipCleanup from tkClipboard.c
	* macosx/tkMacOSXXStubs.c: to being implemented in a platform
	* unix/tkUnixEvent.c:      specific manner.  The cleanup order was
	* win/tkWinX.c:            bad at least on Windows, where we
	reset/cleared display info that was still needed for the clipboard
	to render. [Bug #939389, #822002, #732662]

	* library/panedwindow.tcl (MarkSash): call DragSash to stop sash
	jump when B1 is pressed and released without moving. [Bug #932155]

	* tests/panedwindow.test: panedwindow-25.1
	* generic/tkPanedWindow.c (Unlink): clean up -before/-after refs
	to a slave when removing it. [Bug #928413] (griffin)

	* generic/tkImgPhoto.c (ImgPhotoConfigureMaster): force -data into
	ByteArray and -format into String to correctly handle them if they
	have been shimmered or created as some other object type.

2004-04-24  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkPort.h:
	* unix/Makefile.in:
	* win/makefile.bc: 
	* win/Makefile.in: followup on tcl header reform [FR 922727]:
	removed use of relative #include paths in tkPort.h to allow
	installation of private headers outside of tk source tree; added
	tcl plaform source dir to compiler header search path.

2004-04-23  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/bind.n: Added examples (in line with the parallel programme
	for adding examples to Tcl manual pages) and made assorted minor
	alterations to improve the overall look.

2004-04-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/textDisp.test: Get rid of windows that are no longer
	needed so single-proc tests don't have extra windows hanging
	around unexpectedly.

2004-04-21  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>
